[gd_scene load_steps=42 format=3 uid="uid://00waklg125o8"]

[ext_resource type="Texture2D" uid="uid://c0eixukv2xge0" path="res://Sprites/FULL_Samurai 2D Pixel Art v1.2/Sprites/IDLE.png" id="1_2ci0s"]
[ext_resource type="Script" path="res://Scripts/player_3.gd" id="1_355d3"]
[ext_resource type="PackedScene" uid="uid://d1hxgy1x8mslh" path="res://Scenes/action_animations.tscn" id="4_vyiyg"]
[ext_resource type="Texture2D" uid="uid://bek8n1415otus" path="res://Sprites/FULL_Samurai 2D Pixel Art v1.2/Sprites/DASH.png" id="6_mt616"]
[ext_resource type="Script" path="res://Scripts/move_component.gd" id="9_doan3"]
[ext_resource type="Script" path="res://Scripts/state_machine.gd" id="10_axpc0"]
[ext_resource type="Script" path="res://Scripts/stationary.gd" id="11_tfho1"]
[ext_resource type="Script" path="res://Scripts/moving.gd" id="12_l367n"]
[ext_resource type="Script" path="res://Scripts/standing.gd" id="13_va7ag"]
[ext_resource type="Script" path="res://Scripts/walking.gd" id="14_tay61"]
[ext_resource type="Script" path="res://Scripts/running.gd" id="15_cbveg"]
[ext_resource type="Script" path="res://Scripts/jumping.gd" id="16_v8mgg"]
[ext_resource type="Script" path="res://Scripts/falling.gd" id="17_0it4i"]
[ext_resource type="Script" path="res://Scripts/floating.gd" id="20_ki11k"]
[ext_resource type="Script" path="res://Scripts/dashing.gd" id="21_qlia4"]
[ext_resource type="Script" path="res://Scripts/turning.gd" id="27_yubsk"]
[ext_resource type="Script" path="res://Scripts/landing.gd" id="28_uwjbb"]
[ext_resource type="Script" path="res://Scripts/wall_sticking.gd" id="29_uwg3n"]
[ext_resource type="Script" path="res://Scripts/wall_jumping.gd" id="31_rfds6"]
[ext_resource type="Script" path="res://Scripts/hurt.gd" id="32_qkt1k"]
[ext_resource type="Script" path="res://Scripts/dead.gd" id="32_rj6ky"]
[ext_resource type="PackedScene" uid="uid://cbn1epn5k1kka" path="res://Scenes/health_component.tscn" id="33_gedxy"]
[ext_resource type="Script" path="res://Scripts/stamina_component.gd" id="34_che53"]
[ext_resource type="PackedScene" uid="uid://c1uattvpsm07y" path="res://Scenes/hitbox_component.tscn" id="34_v1pqm"]
[ext_resource type="PackedScene" uid="uid://dkwghxjuis8dy" path="res://Scenes/healthbar.tscn" id="36_1nwku"]
[ext_resource type="Texture2D" uid="uid://cs5cr0bxflavg" path="res://Sprites/Extras/pixel-heart-2779422_1280.webp" id="37_gkl54"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_knpx2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xehp1"]
atlas = ExtResource("1_2ci0s")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rexf"]
atlas = ExtResource("1_2ci0s")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lir57"]
atlas = ExtResource("1_2ci0s")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ehoi"]
atlas = ExtResource("1_2ci0s")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytml6"]
atlas = ExtResource("1_2ci0s")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mo2k6"]
atlas = ExtResource("1_2ci0s")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_flt17"]
atlas = ExtResource("1_2ci0s")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk8yi"]
atlas = ExtResource("1_2ci0s")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcgfa"]
atlas = ExtResource("1_2ci0s")
region = Rect2(768, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_klays"]
atlas = ExtResource("1_2ci0s")
region = Rect2(864, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv3jg"]
atlas = ExtResource("6_mt616")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_td5dg"]
atlas = ExtResource("6_mt616")
region = Rect2(576, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_knlrv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xehp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rexf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lir57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ehoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytml6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo2k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flt17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk8yi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcgfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klays")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv3jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_td5dg")
}],
"loop": true,
"name": &"turn",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7de07"]
radius = 8.0
height = 28.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_355d3")
jump_velocity = -450.0
max_jumps = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Healthbar" parent="CanvasLayer" instance=ExtResource("36_1nwku")]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(15, 32)
scale = Vector2(0.0124999, 0.0128905)
texture = ExtResource("37_gkl54")

[node name="action_animations" parent="." instance=ExtResource("4_vyiyg")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 21)
scale = Vector2(0.6, 1.2)
shape = SubResource("RectangleShape2D_knpx2")
debug_color = Color(6.73831e-07, 0.599039, 0.705504, 0.42)

[node name="Marker2D" type="Marker2D" parent="CollisionShape2D"]
position = Vector2(-2, 10)

[node name="player_move_component" type="Node" parent="."]
script = ExtResource("9_doan3")

[node name="movement_state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("10_axpc0")
starting_state = NodePath("stationary")

[node name="stationary" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("moving_state")]
script = ExtResource("11_tfho1")
moving_state = NodePath("../moving")
state_name = "Stationary"

[node name="moving" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("stationary_state")]
script = ExtResource("12_l367n")
stationary_state = NodePath("../stationary")
animation_name = "wall stick"
state_name = "Moving"

[node name="action_state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("10_axpc0")
starting_state = NodePath("standing")

[node name="standing" type="Node" parent="action_state_machine" node_paths=PackedStringArray("walking_state", "running_state", "jumping_state", "falling_state", "floating_state", "dashing_state", "dead_state", "hurt_state")]
script = ExtResource("13_va7ag")
walking_state = NodePath("../walking")
running_state = NodePath("../running")
jumping_state = NodePath("../jumping")
falling_state = NodePath("../falling")
floating_state = NodePath("../floating")
dashing_state = NodePath("../dashing")
dead_state = NodePath("../dead")
hurt_state = NodePath("../hurt")
animation_name = "idle"
state_name = "standing"

[node name="walking" type="Node" parent="action_state_machine" node_paths=PackedStringArray("standing_state", "running_state", "jumping_state", "falling_state", "floating_state", "dashing_state", "dead_state", "hurt_state")]
script = ExtResource("14_tay61")
standing_state = NodePath("../standing")
running_state = NodePath("../running")
jumping_state = NodePath("../jumping")
falling_state = NodePath("../falling")
floating_state = NodePath("../floating")
dashing_state = NodePath("../dashing")
dead_state = NodePath("../dead")
hurt_state = NodePath("../hurt")
animation_name = "walk"
state_name = "Walking"

[node name="running" type="Node" parent="action_state_machine" node_paths=PackedStringArray("walking_state", "standing_state", "jumping_state", "falling_state", "floating_state", "dashing_state", "turning_state", "dead_state", "hurt_state")]
script = ExtResource("15_cbveg")
walking_state = NodePath("../walking")
standing_state = NodePath("../standing")
jumping_state = NodePath("../jumping")
falling_state = NodePath("../falling")
floating_state = NodePath("../floating")
dashing_state = NodePath("../dashing")
turning_state = NodePath("../turning")
dead_state = NodePath("../dead")
hurt_state = NodePath("../hurt")
animation_name = "run"
state_name = "Running"

[node name="jumping" type="Node" parent="action_state_machine" node_paths=PackedStringArray("walking_state", "running_state", "standing_state", "falling_state", "floating_state", "dashing_state", "wall_sticking_state", "dead_state", "hurt_state")]
script = ExtResource("16_v8mgg")
walking_state = NodePath("../walking")
running_state = NodePath("../running")
standing_state = NodePath("../standing")
falling_state = NodePath("../falling")
floating_state = NodePath("../floating")
dashing_state = NodePath("../dashing")
wall_sticking_state = NodePath("../wall sticking")
dead_state = NodePath("../dead")
hurt_state = NodePath("../hurt")
animation_name = "jump ascend"
state_name = "Jumping"

[node name="falling" type="Node" parent="action_state_machine" node_paths=PackedStringArray("walking_state", "running_state", "jumping_state", "standing_state", "floating_state", "dashing_state", "landing_state", "wall_sticking_state", "dead_state", "hurt_state")]
script = ExtResource("17_0it4i")
walking_state = NodePath("../walking")
running_state = NodePath("../running")
jumping_state = NodePath("../jumping")
standing_state = NodePath("../standing")
floating_state = NodePath("../floating")
dashing_state = NodePath("../dashing")
landing_state = NodePath("../landing")
wall_sticking_state = NodePath("../wall sticking")
dead_state = NodePath("../dead")
hurt_state = NodePath("../hurt")
animation_name = "jump descend"
state_name = "Falling"

[node name="floating" type="Node" parent="action_state_machine" node_paths=PackedStringArray("walking_state", "running_state", "jumping_state", "falling_state", "standing_state", "dashing_state", "landing_state", "wall_sticking_state", "dead_state", "hurt_state")]
script = ExtResource("20_ki11k")
walking_state = NodePath("../walking")
running_state = NodePath("../running")
jumping_state = NodePath("../jumping")
falling_state = NodePath("../falling")
standing_state = NodePath("../standing")
dashing_state = NodePath("../dashing")
landing_state = NodePath("../landing")
wall_sticking_state = NodePath("../wall sticking")
dead_state = NodePath("../dead")
hurt_state = NodePath("../hurt")
animation_name = "jump neutral"
state_name = "Floating"

[node name="dashing" type="Node" parent="action_state_machine" node_paths=PackedStringArray("walking_state", "running_state", "jumping_state", "falling_state", "floating_state", "standing_state", "landing_state", "wall_sticking_state", "dead_state")]
script = ExtResource("21_qlia4")
walking_state = NodePath("../walking")
running_state = NodePath("../running")
jumping_state = NodePath("../jumping")
falling_state = NodePath("../falling")
floating_state = NodePath("../floating")
standing_state = NodePath("../standing")
landing_state = NodePath("../landing")
wall_sticking_state = NodePath("../wall sticking")
dead_state = NodePath("../dead")
power = 300.0
animation_name = "dash"
state_name = "Dashing"

[node name="turning" type="Node" parent="action_state_machine" node_paths=PackedStringArray("walking_state", "standing_state", "jumping_state", "falling_state", "floating_state", "dashing_state", "running_state", "dead_state", "hurt_state")]
script = ExtResource("27_yubsk")
walking_state = NodePath("../walking")
standing_state = NodePath("../standing")
jumping_state = NodePath("../jumping")
falling_state = NodePath("../falling")
floating_state = NodePath("../floating")
dashing_state = NodePath("../dashing")
running_state = NodePath("../running")
dead_state = NodePath("../dead")
hurt_state = NodePath("../hurt")
animation_name = "turn"
state_name = "Turning"

[node name="landing" type="Node" parent="action_state_machine" node_paths=PackedStringArray("walking_state", "running_state", "jumping_state", "falling_state", "standing_state", "floating_state", "dashing_state", "dead_state", "hurt_state")]
script = ExtResource("28_uwjbb")
walking_state = NodePath("../walking")
running_state = NodePath("../running")
jumping_state = NodePath("../jumping")
falling_state = NodePath("../falling")
standing_state = NodePath("../standing")
floating_state = NodePath("../floating")
dashing_state = NodePath("../dashing")
dead_state = NodePath("../dead")
hurt_state = NodePath("../hurt")
animation_name = "landing"
state_name = "Landing"

[node name="wall sticking" type="Node" parent="action_state_machine" node_paths=PackedStringArray("wall_jumping_state", "falling_state", "dead_state", "hurt_state")]
script = ExtResource("29_uwg3n")
wall_jumping_state = NodePath("../wall jumping")
falling_state = NodePath("../falling")
dead_state = NodePath("../dead")
hurt_state = NodePath("../hurt")
animation_name = "wall slide"
state_name = "Wall Sticking"

[node name="wall jumping" type="Node" parent="action_state_machine" node_paths=PackedStringArray("dashing_state", "wall_sticking_state", "falling_state", "dead_state", "hurt_state")]
script = ExtResource("31_rfds6")
dashing_state = NodePath("../dashing")
wall_sticking_state = NodePath("../wall sticking")
falling_state = NodePath("../falling")
dead_state = NodePath("../dead")
hurt_state = NodePath("../hurt")
animation_name = "wall jump"
state_name = "Wall Jumping"

[node name="hurt" type="Node" parent="action_state_machine" node_paths=PackedStringArray("standing_state", "dead_state")]
script = ExtResource("32_qkt1k")
standing_state = NodePath("../standing")
dead_state = NodePath("../dead")
animation_name = "hurt"
state_name = "Hurt"

[node name="dead" type="Node" parent="action_state_machine"]
script = ExtResource("32_rj6ky")
animation_name = "death"
state_name = "Dead"

[node name="attack_state_machine" type="Node" parent="."]

[node name="attack_animations" type="AnimatedSprite2D" parent="."]

[node name="movement_animations" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_knlrv")
animation = &"turn"

[node name="health_component" parent="." node_paths=PackedStringArray("healthbar") instance=ExtResource("33_gedxy")]
healthbar = NodePath("../CanvasLayer/Healthbar")

[node name="stamina_component" parent="." instance=ExtResource("33_gedxy")]
script = ExtResource("34_che53")

[node name="hitbox_component" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("34_v1pqm")]
collision_layer = 2
collision_mask = 2
health_component = NodePath("../health_component")

[node name="hitbox" type="CollisionShape2D" parent="hitbox_component"]
position = Vector2(1, 17)
scale = Vector2(0.5, 1)
shape = SubResource("CapsuleShape2D_7de07")
debug_color = Color(6.73831e-07, 0.599039, 0.705504, 0.42)

[node name="Marker2D" type="Marker2D" parent="hitbox_component/hitbox"]
position = Vector2(-2, 10)

[connection signal="dead" from="action_state_machine/dead" to="." method="_on_dead_dead"]
